crates/glyph-cli/tests/corpus/invalid/imports/circular_b.glyph
import "./circular_a.glyph" { a_text }

export const something = "From B."
